<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="150dp"
        android:background="@color/dy_black_34"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/locate_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/first_step"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_text"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:background="@color/white"
                android:hint="@string/enter_item_id"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dy_grey_AA"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_scan"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/scan_barcode_icon"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/second_step"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start_searching"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/dy_orange"
            android:text="@string/start_searching"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:background="@drawable/dynamsoft_logo" />
</LinearLayout>