<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/home_bg">


	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/home_bg"
		app:layout_constraintBottom_toTopOf="@id/tv_powered"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageView
				android:id="@+id/iv_logo"
				android:layout_width="150dp"
				android:layout_height="37dp"
				android:layout_marginVertical="35dp"
				android:layout_marginTop="18dp"
				android:background="@drawable/dynamsoft_logo"
				android:contentDescription="@null"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/tv_home_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="20dp"
				android:gravity="center"
				android:lineSpacingExtra="4sp"
				android:text="@string/app_home_title"
				android:textColor="@color/white"
				android:textSize="24sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

			<TextView
				android:id="@+id/tv_title_for_types"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_default_x2"
				android:layout_marginBottom="20dp"
				android:gravity="center"
				android:lineSpacingExtra="5sp"
				android:text="@string/for_barcode_types"
				android:textColor="#CCCCCC"
				android:textSize="16sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_home_title" />

			<com.dynamsoft.scenarioorientedsamples.ui.HomeItemsRecyclerView
				android:id="@+id/rv_for_types"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_default_x1.5"
				app:layout_constraintTop_toBottomOf="@id/tv_title_for_types"
				app:mode="@string/for_barcode_types" />

		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

	<TextView
		android:id="@+id/tv_powered"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="0dp"
		android:background="@color/home_bg"
		android:gravity="center"
		android:paddingTop="10dp"
		android:paddingBottom="36dp"
		android:text="@string/powered"
		android:textColor="@color/dy_gray"
		android:textSize="16sp"
		app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>